Lots of new stuff, now requiring Java 19.
What's new? Well:

- Virtual threads to run the many jobs in parallel (instead of a fixed
thread pool)
- Allow a single run of all curators. Use "--once" or "-1" on the command
 line.
 - Logseq-inspired journal.
 - Updated all dependencies to their latest versions.